# Cache

./: .clangformat  .gitignore  CMakeLists.txt  README.md  main.cc  stat.cc  Алгоритмы кэширования. SLRU и PSS.pptx
LRUcache/: CMakeLists.txt
LRUcache/include/: LRUcache.h
LRUcache/src/: LRUcache.cc
LRUcache/tests/: tests.cc
PSScache/: CMakeLists.txt
PSScache/include/: PSScache.h
PSScache/src/: PSScache.cc
PSScache/tests/: tests.cc
graph/: cache_graph.py  data.txt
hash_table/: CMakeLists.txt
hash_table/include/: hash_table.h  hash_table.h.gch
hash_table/src/: hash_table.cc
hash_table/tests/: tests.cc
include/: LRUcache.h  cache.h
list/: CMakeLists.txt
list/include/: list.h  list.h.gch
list/src/: list.cc
list/tests/: tests.cc
src/: LRUcache.cc  cache.cc
tests/: ctests.cc  tests.cc
